# WebSite_UploadImg

./: .dockerignore  .gitignore  README.md  docker-compose.yml  requirements.txt
init-sql/: create-tables.sql  init.sql
services/backend/: .env.sample  Dockerfile  pyproject.toml
services/backend/src/: app.py  run.py
services/backend/src/db/: dependencies.py  dto.py  repositories.py  session.py
services/backend/src/dto/: file.py  pagination.py
services/backend/src/exceptions/: api_errors.py  repository_errors.py
services/backend/src/handlers/: dependencies.py  files.py  upload.py
services/backend/src/interfaces/: handlers.py  pagination.py  repositories.py
services/backend/src/settings/: config.py  logging_config.py
services/frontend/: index.html
services/frontend/css/: style.css  upload.css
services/frontend/js/: random-hero.js  upload.js
services/pgbouncer/: .env.sample  Dockerfile
services/pgbouncer/commands/: setup_pgbouncer_auth.sh
